--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-pwa": "^0.21.1"
   },
   "dependencies": {
-    "chart.js": "^4.4.1"
+    "chart.js": "^4.4.1",
+    "firebase": "^12.6.0"
   }
 }
